--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: ВЕЧЕРНЫШЕВ
-subtitle: Учебно-развлекательный портал Лаборатории ИПИ
+title: Yep eч, ты
+subtitle: на учебно-развлекательном портале Лаборатории ИПИ
 use-site-title: true
 ---
 
