--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Привет чел, ты
+title: Привет всем
 subtitle: на учебно-развлекательном портале Лаборатории ИПИ
 use-site-title: true
 ---
